# clubmansharp-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  prompt.md
.claude/: settings.local.json
gt7-telemetry/: Cargo.toml
gt7-telemetry/src/: client.rs  error.rs  lib.rs  packet.rs  types.rs
rust-vgamepad/: Cargo.toml
rust-vgamepad/src/: controller.rs  error.rs  lib.rs  macos.rs  windows.rs
